test/scc_test/stmt/semantic-errors/044.a
044.t:3:12: error: a continue statement may only be used within a loop